--- a/Clase02-Enlaces/T.P Formulario.html
+++ b/Clase02-Enlaces/T.P Formulario.html
@@ -9,17 +9,24 @@
 <body>
     <h1 align="center"> INSCRIPCION</h1>
     <h3 align="center">Mar Del Plata Programa</h3>
-        <form> <!-- Todos los campos del form van con value por DEFECTO, para que el backend sepa que responde el visitante-->
+        <form align="center">
             <label for="nombre"> Nombre :</label> <!--Los Label se usan para dar pistas al visitante, con for se intercepta con el input elegido-->
                 <input type="text" id="nombre" name="nombre" placeholder="Nombre" required maxlength="15" required><br> <!--Name es para el backend, para que sepa que dato le esta llegando-->
             <label for="apellido"> Apellido :</label>    
                 <input type="text" id="apellido" name="apellido" placeholder="Apellido" required maxlength="15" required><br>
             <label for="date"> Fecha de Nacimiento :</label>
-                <input type="date" id="date" name="date"><br>
+                <input type="date" id="date" name="date" required><br>
             <label for="numero">Número de contacto : </label>
-                <input type="number" id="numero" name="numero" placeholder="Teléfono de contacto" required maxlength="20"><br>
+                <input type="number" id="numero" name="numero" placeholder="Teléfono de contacto" required maxlength="20" required><br>
             <label for="email"> Email :</label>    
-                <input type="email" id ="email" name="email" placeholder="Email"><br>
+                <input type="email" id ="email" name="email" placeholder="Email" required><br>
+            <label for="ciudad"> ¿ De que ciudad sos ?</label><br>
+                    <select required>
+                            <option id="ciudad" value="7600" selected> Mar Del Plata</option>
+                            <option id="ciudad" value="7607"> Miramar</option>
+                            <option id="ciudad" value="7609"> Santa Clara</option>
+                            <option id="ciudad" value="7601"> Batán</option>
+                    </select><br>
             <label for="info"> ¿ Tienes conocimientos previos en Programación ? </label> <br>
                     <input type="radio" id="info" value="1" name="multiple" value="1"> Si   <!--Los name tienen que ser iguales para poder seleccionar 1 sola opcion, y el value, es lo que le llega al backend-->
                     <input type="radio" id="info" value="2" name="multiple" value="2"> No <br>
